# caliptra-sw

./: .gitmodules  Cargo.toml  ci.sh
api/: Cargo.toml
api/soc_mgr/: Cargo.toml  build.rs  build.sh
api/soc_mgr/src/: lib.rs  main.rs  rom.ld  start.S
api/src/: lib.rs  mailbox.rs  prelude.rs  soc_mgr.rs
auth-manifest/app/src/: auth-man.toml  config.rs  main.rs
builder/src/: firmware.rs
common/: Cargo.toml
common/src/: boot_status.rs  lib.rs
coverage/src/: lib.rs  main.rs
drivers/: Cargo.toml
drivers/src/: csrng.rs  hmac384.rs  lms.rs  persistent.rs  sha256.rs  trng_ext.rs
drivers/test-fw/: Cargo.toml
drivers/tests/drivers_integration_tests/: main.rs
error/src/: lib.rs
fmc/src/flow/: fmc_alias_csr.rs  mod.rs
fmc/test-fw/test-rt/: Cargo.toml
fmc/tests/fmc_integration_tests/: test_rtalias.rs
hw-model/: Cargo.toml
hw-model/src/: lib.rs  model_emulated.rs  model_fpga_realtime.rs  model_verilated.rs  prelude.rs
hw-model/test-fw/: Cargo.toml  test_mbox_sram_access.rs
hw-model/tests/: model_tests.rs
image/crypto/src/: lib.rs
image/fake-keys/: Cargo.toml
image/verify/: Cargo.toml
registers/src/: csrng.rs  doe.rs  dv.rs  ecc.rs  el2_pic_ctrl.rs  entropy_src.rs  hmac.rs  kv.rs  lib.rs  mbox.rs  pv.rs  sha256.rs  sha512.rs  sha512_acc.rs  soc_ifc.rs  soc_ifc_trng.rs  spi_host.rs  uart.rs
rom/dev/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: drivers.rs  fips.rs  get_fmc_alias_csr.rs  invoke_dpe.rs  lib.rs
runtime/test-fw/: Cargo.toml
runtime/tests/: integration_tests.rs
test/src/: lib.rs
test/tests/: smoke_test.rs
(+84 files in other folders)
